crates/carta/tests/snapshots/golden_writer__rtf__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
\trowd \trgaph120
\clbrdrb\brdrs\cellx2160\clbrdrb\brdrs\cellx4320\clbrdrb\brdrs\cellx6480\clbrdrb\brdrs\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 A\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 B\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 C\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 D\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx2160\cellx4320\cellx6480\cellx8640
\trkeep\intbl
{
{\cell}
{\cell}
{{\pard\intbl \ql \f0 \sa0 \li360 \fi-360 \bullet \tx360\tab \par}
{\pard\intbl \ql \f0 \sa0 \li360 \fi-360 \bullet \tx360\tab \sa180\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 ok\par}
\cell}
}
\intbl\row}
{\pard \ql \f0 \sa180 \li0 \fi0 \par}
