crates/carta/tests/snapshots/golden_writer__rtf__table__table-grid-spans.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
\trowd \trgaph120
\clbrdrb\brdrs\cellx3000\clbrdrb\brdrs\cellx4560\clbrdrb\brdrs\cellx5880\clbrdrb\brdrs\cellx7200
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 Header row, column 1\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 Header 2\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 Header 3\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 Header 4\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx3000\cellx4560\cellx5880\cellx7200
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 body row 1, column 1\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 column 2\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 column 3\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 column 4\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx3000\cellx4560\cellx5880\cellx7200
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 body row 2\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 Cells may span columns.\par}
\cell}
{\cell}
{\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx3000\cellx4560\cellx5880\cellx7200
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 body row 3\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 Cells may span rows.\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li360 \fi-360 \bullet \tx360\tab Cells.\par}
{\pard\intbl \ql \f0 \sa0 \li360 \fi-360 \bullet \tx360\tab Contain.\par}
{\pard\intbl \ql \f0 \sa0 \li360 \fi-360 \bullet \tx360\tab Blocks.\sa180\par}
\cell}
{\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx3000\cellx4560\cellx5880\cellx7200
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 body row 4\par}
\cell}
{\cell}
{\cell}
{\cell}
}
\intbl\row}
{\pard \ql \f0 \sa180 \li0 \fi0 \par}
