crates/carta/tests/snapshots/golden_writer__rtf__table__table-grid-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
\trowd \trgaph120
\clbrdrb\brdrs\cellx480\clbrdrb\brdrs\cellx1680
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 a\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 b\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx480\cellx1680
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 1\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 2\par}
\cell}
}
\intbl\row}
{\pard \ql \f0 \sa180 \li0 \fi0 \par}
