crates/carta/tests/snapshots/golden_writer__rtf__table__table-long-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
\trowd \trgaph120
\clbrdrb\brdrs\cellx4320\clbrdrb\brdrs\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 k\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 description\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx4320\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 a\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 this cell holds a deliberately long run of text that cannot fit inside one seventy-two column line and therefore forces a layout decision\par}
\cell}
}
\intbl\row}
{\pard \ql \f0 \sa180 \li0 \fi0 \par}
