crates/carta/tests/snapshots/golden_writer__rtf__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
\trowd \trgaph120
\clbrdrb\brdrs\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 h\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 v\par}
\cell}
}
\intbl\row}
{\pard \ql \f0 \sa180 \li0 \fi0 The full caption text\par}
